--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function (){
 
