--- a/public/back/index.html
+++ b/public/back/index.html
@@ -5,38 +5,33 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <title>Synthe</title>
 </head>
 <body>
 
-    <ul id="messages"></ul>
-    <form id="form" action="">
-        <label for="input"></label>
-        <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
+    <div class="card">
+        <div class="card-body">
+            This is some text within a card body.
+        </div>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
-    <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./jquery.min.js"></script>
+    <script src="./jquery-ui.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
     <script type="text/javascript">
 
         let socket = io();
-        const form = document.getElementById('form');
-        const input = document.getElementById('input');
-
         socket.on("connect", () => { //Log de connexion (console du node)
             socket.emit('connexion', 'back');
         });
 
-        form.addEventListener('submit', function(e) {
-            e.preventDefault();
-            if (input.value) {
-                socket.emit('BackToServer', input.value);
-                input.value = '';
-            }
-        });
+            // e.preventDefault();
+            // if (input.value) {
+            //     socket.emit('BackToServer', input.value);
+            //     input.value = '';
+            // }
     </script>
 
 </body>
