--- a/public/back/index.html
+++ b/public/back/index.html
@@ -6,15 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/style_back.css">
     <title>Synthe</title>
 </head>
 <body>
-
-    <div class="card">
-        <div class="card-body">
-            This is some text within a card body.
+        <div class="container-fluid mt-3">
+            <div class="row">
+                <div class="col text-center">D</div>
+                <div class="col text-center">E</div>
+                <div class="col text-center">F</div>
+            </div>
         </div>
-    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./jquery.min.js"></script>
