--- a/public/back/index.html
+++ b/public/back/index.html
@@ -7,33 +7,84 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style_back.css">
+    <link rel="stylesheet" href="./flash/assets/notify.css">
     <title>Synthe</title>
 </head>
 <body>
-        <div class="container-fluid mt-3">
-            <div class="row">
-                <div class="col text-center">D</div>
-                <div class="col text-center">E</div>
-                <div class="col text-center">F</div>
-            </div>
-        </div>
 
+        <div class="container-fluid mt-3">
+            <div class="row m-lg-3 gap-lg-5 d-flex justify-content-center">
+                <div class="card col-sm-5">
+                    <div class="card-body d-flex flex-column">
+                        <h3 class="card-title">Titre</h3>
+                        <input type="text" name="titre" id="titre">
+                        <button id="titreShow" class="btn btn-success mt-3"><i class="bi bi-arrow-right-square-fill"></i> Lancer</button>
+                        <button id="titreHide" class="btn btn-danger mt-3 hide"><i class="bi bi-arrow-left-square-fill"></i> Rentrer</button>
+                    </div>
+                </div>
+                <div class="card col-sm-5">
+                    <div class="card-body d-flex flex-column">
+                        <h3 class="card-title">Description</h3>
+                        <input type="text" name="" id="">
+                        <button id="comShow" class="btn btn-success mt-3"><i class="bi bi-arrow-right-square-fill"></i> Lancer</button>
+                        <button id="comHide" class="btn btn-danger mt-3 hide"><i class="bi bi-arrow-left-square-fill"></i> Rentrer</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+<footer>
+    <p id="showToken" class="text-center">Token : </p>
+</footer>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./jquery.min.js"></script>
     <script src="./jquery-ui.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./flash/assets/notify.js"></script>
     <script type="text/javascript">
 
+        $('.hide').hide();//Disparition des buttons caché à la base
         let socket = io();
+
+        let token =  Math.random().toString(36).substr(2);//Génaration d'un token a la connexion (et affichage dans le front)
+        $('#showToken').append(token);
+
         socket.on("connect", () => { //Log de connexion (console du node)
-            socket.emit('connexion', 'back');
+            socket.emit('connexion', 'back (' + token + ')');
         });
 
-            // e.preventDefault();
-            // if (input.value) {
-            //     socket.emit('BackToServer', input.value);
-            //     input.value = '';
-            // }
+
+        $('#titreShow').click(function(){
+            if ($("#titre").val()==='') {
+                flashError('Veuillez remplir le champs !')
+            }else {
+                flashSuccess('Titre transmit au serveur')
+                socket.emit("BackToServer", { 'action':'titrelance', 'info':$("#titre").val()})
+                $('#titreShow').hide()
+                $('#titreHide').show()
+            }
+        })
+        $('#titreHide').click(function(){
+            flashSuccess('Affichage désactivé')
+            socket.emit("BackToServer", { 'action':'titrerentre', 'info':''})
+            $('#titreHide').hide()
+            $('#titreShow').show()
+        })
+
+        function flashError(message){
+            notify({
+                message: message,
+                color: 'danger',
+                timeout: 3000
+            });
+        }
+        function flashSuccess(message){
+            notify({
+                message: message,
+                color: 'success',
+                timeout: 3000
+            });
+        }
     </script>
 
 </body>
